// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-switch component should render an aria-label: renders-with-aria 1`] = `
<ic-switch label="Custom title">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <label class="ic-switch-container ic-switch-medium" for="ic-switch-input-0">
      <ic-input-label class="ic-switch-label" for="ic-switch-input-0" helpertext="" label="Custom title">
        <slot name="helper-text" slot="helper-text"></slot>
      </ic-input-label>
      <span class="ic-switch-line-break"></span>
      <input aria-checked="false" aria-describedby="" aria-label="Custom title" class="ic-switch-input" id="ic-switch-input-0" name="toggle" role="switch" type="checkbox">
      <span class="ic-switch-toggle">
        <span aria-hidden="true" class="ic-switch-icon-line"></span>
        <svg aria-hidden="true" class="ic-switch-icon" fill="none" focusable="false" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
          <circle class="ic-switch-icon-circle" cx="4" cy="4" fill="none" r="3.5" vector-effect="non-scaling-stroke"></circle>
        </svg>
      </span>
      <slot name="right-adornment"></slot>
    </label>
  </template>
  <input class="ic-input" name="ic-switch-input-0" type="hidden" value="">
</ic-switch>
`;

exports[`ic-switch component should render checked: renders-checked 1`] = `
<ic-switch checked="true" label="Custom title">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <label class="ic-switch-container ic-switch-medium" for="ic-switch-input-2">
      <ic-input-label class="ic-switch-label" for="ic-switch-input-2" helpertext="" label="Custom title">
        <slot name="helper-text" slot="helper-text"></slot>
      </ic-input-label>
      <span class="ic-switch-line-break"></span>
      <input aria-checked="true" aria-describedby="" aria-label="Custom title" checked="" class="ic-switch-input" id="ic-switch-input-2" name="toggle" role="switch" type="checkbox">
      <span class="ic-switch-toggle">
        <span aria-hidden="true" class="ic-switch-icon-line"></span>
        <svg aria-hidden="true" class="ic-switch-icon" fill="none" focusable="false" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
          <circle class="ic-switch-icon-circle" cx="4" cy="4" fill="none" r="3.5" vector-effect="non-scaling-stroke"></circle>
        </svg>
      </span>
      <slot name="right-adornment"></slot>
    </label>
  </template>
  <input class="ic-input" name="ic-switch-input-2" type="hidden" value="on">
</ic-switch>
`;

exports[`ic-switch component should render disabled: disabled-removed 1`] = `
<ic-switch label="Custom title">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <label class="ic-switch-container ic-switch-medium" for="ic-switch-input-1">
      <ic-input-label class="ic-switch-label" for="ic-switch-input-1" helpertext="" label="Custom title">
        <slot name="helper-text" slot="helper-text"></slot>
      </ic-input-label>
      <span class="ic-switch-line-break"></span>
      <input aria-checked="false" aria-describedby="" aria-label="Custom title" class="ic-switch-input" id="ic-switch-input-1" name="toggle" role="switch" type="checkbox">
      <span class="ic-switch-toggle">
        <span aria-hidden="true" class="ic-switch-icon-line"></span>
        <svg aria-hidden="true" class="ic-switch-icon" fill="none" focusable="false" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
          <circle class="ic-switch-icon-circle" cx="4" cy="4" fill="none" r="3.5" vector-effect="non-scaling-stroke"></circle>
        </svg>
      </span>
      <slot name="right-adornment"></slot>
    </label>
  </template>
  <input class="ic-input" name="ic-switch-input-1" type="hidden" value="">
</ic-switch>
`;

exports[`ic-switch component should render disabled: renders-disabled 1`] = `
<ic-switch disabled="true" label="Custom title">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <label class="ic-switch-container ic-switch-disabled ic-switch-medium" for="ic-switch-input-1">
      <ic-input-label class="ic-switch-label" disabled="" for="ic-switch-input-1" helpertext="" label="Custom title">
        <slot name="helper-text" slot="helper-text"></slot>
      </ic-input-label>
      <span class="ic-switch-line-break"></span>
      <input aria-checked="false" aria-describedby="" aria-label="Custom title" class="ic-switch-input" disabled="" id="ic-switch-input-1" name="toggle" role="switch" type="checkbox">
      <span class="ic-switch-toggle">
        <span aria-hidden="true" class="ic-switch-icon-line"></span>
        <svg aria-hidden="true" class="ic-switch-icon" fill="none" focusable="false" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
          <circle class="ic-switch-icon-circle" cx="4" cy="4" fill="none" r="3.5" vector-effect="non-scaling-stroke"></circle>
        </svg>
      </span>
      <slot name="right-adornment"></slot>
    </label>
  </template>
  <input class="ic-input" disabled="" name="ic-switch-input-1" type="hidden" value="">
</ic-switch>
`;

exports[`ic-switch component should render large: renders-large 1`] = `
<ic-switch checked="true" label="Custom title" size="large">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <label class="ic-switch-container ic-switch-large" for="ic-switch-input-4">
      <ic-input-label class="ic-switch-label" for="ic-switch-input-4" helpertext="" label="Custom title">
        <slot name="helper-text" slot="helper-text"></slot>
      </ic-input-label>
      <span class="ic-switch-line-break"></span>
      <input aria-checked="true" aria-describedby="" aria-label="Custom title" checked="" class="ic-switch-input" id="ic-switch-input-4" name="toggle" role="switch" type="checkbox">
      <span class="ic-switch-toggle">
        <span aria-hidden="true" class="ic-switch-icon-line"></span>
        <svg aria-hidden="true" class="ic-switch-icon" fill="none" focusable="false" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
          <circle class="ic-switch-icon-circle" cx="4" cy="4" fill="none" r="3.5" vector-effect="non-scaling-stroke"></circle>
        </svg>
      </span>
      <slot name="right-adornment"></slot>
    </label>
  </template>
  <input class="ic-input" name="ic-switch-input-4" type="hidden" value="on">
</ic-switch>
`;

exports[`ic-switch component should render small: renders-small 1`] = `
<ic-switch checked="true" label="Custom title" size="small">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <label class="ic-switch-container ic-switch-small" for="ic-switch-input-3">
      <ic-input-label class="ic-switch-label" for="ic-switch-input-3" helpertext="" label="Custom title">
        <slot name="helper-text" slot="helper-text"></slot>
      </ic-input-label>
      <span class="ic-switch-line-break"></span>
      <input aria-checked="true" aria-describedby="" aria-label="Custom title" checked="" class="ic-switch-input" id="ic-switch-input-3" name="toggle" role="switch" type="checkbox">
      <span class="ic-switch-toggle">
        <span aria-hidden="true" class="ic-switch-icon-line"></span>
        <svg aria-hidden="true" class="ic-switch-icon" fill="none" focusable="false" viewBox="0 0 8 8" xmlns="http://www.w3.org/2000/svg">
          <circle class="ic-switch-icon-circle" cx="4" cy="4" fill="none" r="3.5" vector-effect="non-scaling-stroke"></circle>
        </svg>
      </span>
      <slot name="right-adornment"></slot>
    </label>
  </template>
  <input class="ic-input" name="ic-switch-input-3" type="hidden" value="on">
</ic-switch>
`;
